--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,47 @@
 <div class="container">
-  <header>
+
+  <header><a href="/">
     <img src="http://happilyeverchan.xyz/img/monogram.png" alt="monogram" style="height: auto;
           width: auto;
           max-width: 75%;
           max-height: 100%;
           display: block;
           margin-left: auto;
-          margin-right: auto" />
+          margin-right: auto" /></a>
   </header>
 
-  <input #search  (input)="onSearchChange($event.target.value)" placeholder="Searching">
+  <hr>
+  <div class="row">
+    <div class="input-field col s12 ">
+      <input  #search  (input)="onSearchChange($event.target.value)"  id="search"class="validate" type="text">
+      <label for="search">Searching</label>
+    </div>
+  </div>
+
+  <a class="btn-floating btn-large waves-effect waves-light red" (click)="openModal()" style="position: fixed;
+    bottom: 5%;
+    right: 5%; ">MAp</a>
+
   <table class="highlight centered">
     <thead>
     <tr>
-      <th>Index</th>
       <th>Name</th>
-      <th>Table</th>
       <th>Side</th>
+      <th>Table Number</th>
     </tr>
     </thead>
     <tbody *ngIf="searching">
     <tr  *ngFor="let item of item | async | searchFilter: search.value ">
-      <td>{{item.index +1 }}</td>
       <td>{{item.name}}</td>
-      <td>{{item.table}}</td>
       <td>{{item.side}}</td>
+      <td>{{item.tablenum}}</td>
     </tr>
     </tbody>
     <tbody *ngIf="!searching">
     <tr *ngFor="let item of item | async | paginate: { itemsPerPage: 10, currentPage: p } ">
-      <td>{{item.index +1 }}</td>
       <td>{{item.name}}</td>
-      <td>{{item.table}}</td>
       <td>{{item.side}}</td>
+      <td>{{item.tablenum}}</td>
     </tr>
     </tbody>
   </table>
@@ -48,7 +57,19 @@
                         screenReaderCurrentLabel="You're on page"
                         class="center-align">
   </pagination-controls>
+  <!-- Modal Trigger -->
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal" materialize="modal"  [materializeActions]="modalActions">
+
+
+    <div class="modal-content" >
+      <p><img class="responsive-img" src="http://happilyeverchan.xyz/img/map.jpeg" ></p>
+    </div>
+      <a class="waves-effect waves-green btn-flat" (click)="closeModal()">Close</a>
+  </div>
 
 </div>
+
 
 
