--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,14 +20,14 @@
 
   <a class="btn-floating btn-large waves-effect waves-light red" (click)="openModal()" style="position: fixed;
     bottom: 5%;
-    right: 5%; ">MAp</a>
+    right: 5%; ">MAP</a>
 
-  <table class="highlight centered">
+  <table class="highlight">
     <thead>
     <tr>
       <th>Name</th>
       <th>Side</th>
-      <th>Table Number</th>
+      <th>Table</th>
     </tr>
     </thead>
     <tbody *ngIf="searching">
@@ -55,7 +55,7 @@
                         screenReaderPaginationLabel="Pagination"
                         screenReaderPageLabel="page"
                         screenReaderCurrentLabel="You're on page"
-                        class="center-align">
+                        class="center-align pagination-color">
   </pagination-controls>
   <!-- Modal Trigger -->
 
